[package]
name = "pheno-port-adapter"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[workspace]

[dependencies]
thiserror = "2.0"
# Async runtime backing the hex-port traits (HexCachePort, HexTimePort, ...).
# Kept as a normal dep (not just dev-deps) because the hex-port adapters
# return `impl Future` from their `async fn` methods; tokio's macros and
# runtime are needed at compile time even when callers drive the adapters
# from a different executor.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# `async-trait` keeps the hex-port traits object-safe so callers can hold
# `Box<dyn HexCachePort>` for late binding (e.g. in trait-object service
# locators). All hex-port adapters use the macro form for consistency.
async-trait = "0.1"
# Redis client used by `adapters::redis_cache::RedisAdapter` to speak the
# RESP wire protocol. Feature `tokio-comp` keeps the runtime story aligned
# with the rest of the crate (single tokio runtime, no extra executors).
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
# Canonical OTLP wire-format export substrate (ADR-037).
# `pheno-port-adapter` uses `pheno-otel` to surface
# connection-lifecycle spans (connect/disconnect/error) to OTLP/HTTP
# collectors when wired into a wider observability stack (per
# ADR-023 Rule 3.1: every substrate ships observability).
pheno-otel = { path = "../pheno-otel" }
# v20-T5 (L23): proptest is in [dependencies] (not just [dev-dependencies])
# so the manual `Arbitrary` impls in `src/lib.rs` for `AdapterError` and
# `Connection` compile. The proptest book requires this: a crate that
# provides `Arbitrary` impls in src/ must have proptest as a regular
# dep (not just a dev-dep) so the generated `impl Arbitrary` blocks can
# reference the trait. Tests in `tests/proptest_smoke.rs` then exercise
# these impls via `any::<T>()`.
proptest = { version = "1.4", default-features = false, features = ["std"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# SIDE-23 benchmark suite (scaffolding): 100-cycle send/recv cache
# benchmark lives in benches/cache_cycles.rs.
criterion = "0.8"
# V20-T4 (L27) consumer-driven contract tests (Pact). The pact_consumer
# crate's `mock_server` module is used to spin up an in-process HTTP
# server that records requests and replays the configured response.
# Pacts land in `target/pacts/<consumer>-<provider>.json` and feed
# `scripts/can-i-deploy.sh` for can-i-deploy gating.
pact_consumer = "1.4"
# Sync HTTP client used to drive the real HTTP requests in the Pact
# tests against the in-process mock cache provider. ureq is chosen
# for its tiny dependency surface and sync API.
ureq = { version = "2.10", default-features = false, features = ["tls"] }

# V20-T4 (L27) Pact consumer contract test. The mock cache provider
# is provided by pact_consumer's in-process mock server; the
# explicit `[[test]]` entry keeps the contract isolated from the
# rest of the integration suite (the `proptest_smoke.rs` and
# `loom*` tests use the in-tree RedisAdapter and would otherwise
# require a real Redis to be running).
[[test]]
name = "provider_cache_hex_port_pact"
path = "tests/contracts/provider_cache_hex_port_pact.rs"

[[bench]]
name = "cache_cycles"
harness = false
