[package]
name = "pheno-port-adapter"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[workspace]

[dependencies]
thiserror = "2.0"
# Async runtime backing the hex-port traits (HexCachePort, HexTimePort, ...).
# Kept as a normal dep (not just dev-deps) because the hex-port adapters
# return `impl Future` from their `async fn` methods; tokio's macros and
# runtime are needed at compile time even when callers drive the adapters
# from a different executor.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# `async-trait` keeps the hex-port traits object-safe so callers can hold
# `Box<dyn HexCachePort>` for late binding (e.g. in trait-object service
# locators). All hex-port adapters use the macro form for consistency.
async-trait = "0.1"
# Redis client used by `adapters::redis_cache::RedisAdapter` to speak the
# RESP wire protocol. Feature `tokio-comp` keeps the runtime story aligned
# with the rest of the crate (single tokio runtime, no extra executors).
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
# Canonical OTLP wire-format export substrate (ADR-037).
# `pheno-port-adapter` uses `pheno-otel` to surface
# connection-lifecycle spans (connect/disconnect/error) to OTLP/HTTP
# collectors when wired into a wider observability stack (per
# ADR-023 Rule 3.1: every substrate ships observability).
pheno-otel = { path = "../pheno-otel" }

[dev-dependencies]
# v25-T7 (L42) per-crate proptest CI matrix (cycle-15). Tests in
# tests/proptest_smoke.rs (NEW) and tests/proptest_arbitrary.rs (existing
# L23 work) use `proptest::prelude::*`. Pinned to 1.x to match the rest of
# the fleet; `PROPTEST_CASES=256` is set by the CI workflow.
proptest = "1"
loom = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Concurrency model checker (v14 T5: L25 pillar, cycle 3).
# Permutation-tests shared-state data structures used in this crate's
# public API. Stable Rust 1.82+ compatible; no nightly required.
