[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pheno-pydantic-models"
version = "0.1.0"
description = "Canonical Pydantic models for the pheno-* fleet. Mirrors pheno-zod-schemas domain model (User, WorklogEntry, Project) so Python and TS services validate the same wire contract."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Phenotype / Koosha Pari", email = "kooshapari@users.noreply.github.com" },
]
keywords = [
  "pydantic",
  "schema",
  "phenotype",
  "pheno",
  "validation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.6",
  "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pheno_pydantic_models*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
