[package]
name = "phenotype-cli-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for standardizing CLI patterns across Phenotype CLIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phenotype-dev/phenotype-cli-macros"
authors = ["Phenotype <dev@kooshapari.com>"]
rust-version = "1.75"

[lib]
proc-macro = true

[dependencies]
clap = { version = ">=4.3, <4.4", features = ["derive", "env"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
