[package]
name = "focus-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex = "0.4"
focus-observability = { path = "../focus-observability" }
tracing.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "verify"
harness = false
