[package]
name = "focus-backup"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid = { workspace = true }
sha2.workspace = true
tokio = { workspace = true }
async-trait.workspace = true

# Encryption: age (modern GPG successor, passphrase + X25519 support)
age = "0.11"

# Compression
zstd = "0.13"

# Archive
tar.workspace = true
hex.workspace = true

# Storage / domain
focus-storage = { path = "../focus-storage" }
focus-audit = { path = "../focus-audit" }
focus-events = { path = "../focus-events" }
focus-rules = { path = "../focus-rules" }
focus-rewards = { path = "../focus-rewards" }
focus-penalties = { path = "../focus-penalties" }
focus-planning = { path = "../focus-planning" }
focus-templates = { path = "../focus-templates" }

[dev-dependencies]
tempfile = "3"
